# plcontainer

./: .gitignore  .gitmodules  0001-rclient-cmake.patch  1.c  CMakeLists.txt  Makefile  Pack.cmake  README.md  README_PG.md  README_coordinator.md  VERSION  VERSION_bundle_ubuntu1804_py27  VERSION_bundle_ubuntu1804_py37  VERSION_bundle_ubuntu1804_r  gppkg_spec.yml.in  plcontainer.control
cmake/: Distro.cmake  Git.cmake  Regress.cmake
concourse/: PROJ_NAME  README.md  fly.sh  mirrorless_pipepine.yml  pipeline.yml  pr_pipeline.yml  release-pipeline.yml
concourse/lib/: fly.sh
concourse/pipeline/: commit.yml  dev.yml  job_def.lib.yml  pr.yml  release.yml  release_bundle.yml  res_def.yml  trigger_def.lib.yml
concourse/scripts/: build.sh  build_k8s.sh  build_plcontainer.sh  build_plcontainer_client.sh  build_plcontainer_cmake.sh  build_plcontainer_prepare.sh  build_plcontainer_server.sh  build_plcontainer_ubuntu.sh  build_plcontainer_ubuntu_prepare.sh  clean.sh  docker-lib.sh  docker_build_image.sh  docker_install.sh  entry.sh  greenplumr_test.sh  install_r_package.R  plcontainer_release.sh  pre_build.sh  pre_test.sh  run_plcontainer_perf.sh  run_plcontainer_resgroup_tests.sh  run_plcontainer_tests.sh  test.sh  test_plcontainer.sh  test_plcontainer_py3.sh  test_plcontainer_py39.sh  test_plcontainer_r.sh
concourse/tasks/: plcontainer_GreenplumR_test.yml  plcontainer_release.yml  plcontainer_resgroup_tests.yml  plcontainer_tests.yml
dockerfiles/: Dockerfile.python.ubuntu  Dockerfile.python27.ubuntu  Dockerfile.python3.ubuntu  Dockerfile.python311.alpine  Dockerfile.python311.ubuntu2204  Dockerfile.python37.ubuntu1804  Dockerfile.python37.ubuntu1804_b  Dockerfile.python39.alpine  Dockerfile.python39.ubuntu  Dockerfile.python39.ubuntu2004  Dockerfile.python39.ubuntu2004_b  Dockerfile.python39.ubuntu2204  Dockerfile.r.alpine  Dockerfile.r.ubuntu  Dockerfile.r.ubuntu1804  Dockerfile.r.ubuntu2004_b  VERSION_bundle_ubuntu1804_py27  VERSION_bundle_ubuntu1804_py37  install_r.sh  install_r_package.R  r_env.sh  requirements-py37.txt  requirements-py39.txt
k8s/: .gitignore  Dockerfile  Makefile  PROJECT  README.md  go.mod
k8s/api/v1/: groupversion_info.go  plcontainerbackend_types.go  zz_generated.deepcopy.go
k8s/cmd/: main.go
k8s/config/crd/: kustomization.yaml
k8s/config/default/: kustomization.yaml  manager_auth_proxy_patch.yaml  manager_config_patch.yaml
k8s/config/manager/: kustomization.yaml  manager.yaml
k8s/config/prometheus/: monitor.yaml
management/config/: plcontainer_configuration.xml  plcontainer_configuration.xml.in
management/sql/: plcontainer--1.0.0--1.1.0.sql  plcontainer_gp--1.0.0.sql  plcontainer_install.sql  plcontainer_uninstall.sql
package/: Makefile  Makefile.ubuntu  Pack.cmake  gppkg-deb.mk  gppkg.mk  gppkg_spec.yml.in  gppkg_spec_v2.yml.in  plcontainer.spec
src/: Makefile  config.h.in  containers.c  containers.h  entry.sh  exportplc.ld.version  function_cache.c  hidejsonc.ld.version  message_fns.c  plc  plc_backend_api.c  plc_backend_api.h  plc_configuration.c  plc_configuration.h  plc_container_info.c  plc_container_info.h  plc_coordinator.c  plc_docker_api.c  plc_docker_api.h  plc_docker_api_common.h  plc_docker_common.c  plc_docker_common.h  plc_docker_curl_api.c  plc_docker_curl_api.h  plc_k8s_api.c  plc_k8s_api.h  plc_pg.h  plc_process_api.c  plc_process_api.h  plc_typeio.c  plc_typeio.h  plcontainer.c  plcontainer.h  plcontainer.proto  plcontainer_common.h  plcontainer_udfs.c  sqlhandler.c  sqlhandler.h  subtransaction_handler.c  subtransaction_handler.h
src/common/: comm_channel.c  comm_connectivity.c  comm_connectivity.h  comm_messages.c  comm_misc.c  comm_misc.h  comm_server.c  comm_server.h  comm_utils.c  comm_utils.h
src/coordinator/: Makefile  plc_coordinator.c  plc_coordinator.h
src/proto/: client.cc
src/pyclient/: CMakeLists.txt  Makefile  client.c  plpy_spi.c  plpy_spi.h  py3client  pycall.c  pycall.h  pyconversions.c  pyconversions.h  pyerror.c
src/rclient/: CMakeLists.txt  rcall.c
src/server/: server.c  server.h  server_misc.c  server_misc.h
tests/: .gitignore  CMakeLists.txt  Makefile  README.md  init_file  pl_resgroup_schedule  pl_schedule  pl_schedule_py  plcontainer_configuration_test.xml  prepare_runtime.sh  test_assign_gpu.py  test_utility.sh  test_wrong_config.sh  tests_using_faultinjector.txt
tests/expected/: faultinject_python.out  function_python.out  function_python3.out  function_python3_gpdb5.out  memory_consuming_python.out  parallel_6_py.out  plcontainer_exception_python.out  plcontainer_faultinject_python.out  plcontainer_spi_python.out  plcontainer_spi_r.out  plcontainer_test_python.out  python3_import_module.out  runtimeid_declaration.out  spi_python.out  spi_python3.out  spi_r.out  test_configuration.out  test_containernetwork.out  test_python.out  test_python.out.gp5  test_python.out.gp6  test_python3.out  test_python3_error.out  test_python_6.out  test_python_gpdb5.out  test_r.out  test_r_error.out  test_utility.out  test_wrong_config.out  test_wrong_config_1.out  test_wrong_config_python3.out  uda_python.out  uda_python3.out  uda_python3.out.gp6  user_control_py3.out
tests/isolation2/: Makefile  schedule.yml
tests/regress/: pl_schedule_py  pl_schedule_py2  pl_schedule_py3  pl_schedule_py39  pl_schedule_py39_dsb  pl_schedule_py3_bundle  pl_schedule_py_bundle  pl_schedule_r
tests/sql/: exception_py.sql  function_python.sql  function_python3.sql  function_python3_gpdb5.sql  memory_consuming_python.sql  parallel_3_py.sql  plcontainer_faultinject_python.sql  plcontainer_function_python.sql  plcontainer_spi_python.sql  plcontainer_spi_r.sql  plcontainer_test_python.sql  python3_import_module.sql  python_import_module.sql  runtimeid_declaration.sql  spi_python.sql  spi_python3.sql  test_configuration.sql  test_containernetwork.sql  test_python.sql  test_python3.sql  test_python3_error.sql  test_r.sql  test_wrong_config.sql  uda_python.sql  uda_python3.sql  uda_r.sql
tests/wrong_configuration/: wrong_conf1.xml  wrong_conf2.xml  wrong_conf3.xml  wrong_conf4.xml  wrong_conf5.xml
(+134 files in other folders)
